# fine_tune_chatgpt

./: .gitignore  Pipfile  README.md  clean_counselchat_data.py  clean_intents_data.py  finetune.ipynb  pyproject.toml  stopwords.txt  validation.ipynb  wordcloud.ipynb
data/: chatgpt-3.5-turbo_test.csv  cleaned_chatbot_data.csv  cleaned_counselchat.csv  counselchat-data.csv  fine-tuned_test.csv  test.csv
output/: test_data.txt
scripts/: check.sh  format.sh  install.sh
